test/ui/test/lowering/constructor-with-explicit-public.stderr
error[E013]: attribute ‘public’ is ascribed to a constructor declaration
  --> ${TEST_FOLDER}/lowering/constructor-with-explicit-public.lushui:12:5
   |
12 |     @public Unit: Unit -> Universe
   |     ^^^^^^^ misplaced attribute
   |
  --> ${TEST_FOLDER}/lowering/constructor-with-explicit-public.lushui:12:13
   |
12 |     @public Unit: Unit -> Universe
   |             ---------------------- incompatible item
   |
  note: attribute ‘public’ can only be ascribed to declarations except constructors and module headers

error[E013]: attribute ‘public’ is ascribed to a constructor declaration
  --> ${TEST_FOLDER}/lowering/constructor-with-explicit-public.lushui:13:5
   |
13 |     @(public self) Bool: Bool -> Universe = Universe.Bool
   |     ^^^^^^^^^^^^^^ misplaced attribute
   |
  --> ${TEST_FOLDER}/lowering/constructor-with-explicit-public.lushui:13:20
   |
13 |     @(public self) Bool: Bool -> Universe = Universe.Bool
   |                    -------------------------------------- incompatible item
   |
  note: attribute ‘public’ can only be ascribed to declarations except constructors and module headers

error[E020]: ‘Bool’ is defined multiple times in this scope
  --> ${TEST_FOLDER}/lowering/constructor-with-explicit-public.lushui:13:45
   |
13 |     @(public self) Bool: Bool -> Universe = Universe.Bool
   |                                             ^^^^^^^^^^^^^ conflicting definition
   |
  note: the body of the constructor is implied but it also has a body introduced by ‘= ?value’

error: aborting due to 3 previous errors

